Release ...
* troff: In ".ad p" mode, when a line break was inserted after an
  existing hyphen or em dash, another hyphen was added when the previous
  characters formed a kerning pair. This has been fixed.
* troff: In ".ad p" mode, when the character before the first interword
  space formed a kerning pair with the space character, the line length
  was incorrectly computed, and the line was prolongated by this amount.
  This has been fixed.
* troff: The "\{", "\}", and "\x" escape sequences inhibited kerning in
  the adjustment computation but not in the output routine, which could
  lead to prolongated output lines. They now inhibit kerning completely.
* eqn: Generated equations no longer start with "\x'0'". This allows
  kerning with the preceding character in an inline equation.
* nroff: The content of a "\X" function is now ignored (instead of being
  printed with zero width).
* nroff: Combining UTF-8 characters are now assumed to have width zero.
* nroff: The ".rd" request has been fixed; it had not been working since
  the last release.
* troff: The ".rd" request now accepts locale-dependent input characters.
* [nt]roff: Fixed an error in ".ad p" mode which could lead to core dumps
  with ".ev" requests that were not properly paired.
* nroff: Hyphenation of words containing non-ASCII characters now really
  works; such characters were erroneously dropped with the last release,
  leading to incorrect hyphenations in some cases.
* troff: Use of the "\s+[n]", "\s-[n]", "\s+'n'", or "\s-'n'" escape
  sequence forms now leaves the arithmetic unit handling in a clean
  state. The previous failure to do so lead to wrong numeric results
  under certain circumstances; in particular, it caused the "over" eqn
  keyword to produce incorrect output.

Release 061114
* [nt]roff: The units "t" (printer's point), "T" (printer's pica), "D"
  (Didot point) and "C" (cicero) have been introduced.
* [nt]roff: ".ad p" mode no longer employs a temporary diversion; the